# BoltFlow

./: .gitignore  BoltFlow.sln  BoltFlow.vcxproj  BoltFlow.vcxproj.filters  README.md
BoltFlow/: CMakeLists.txt  collision.cpp  collision.h  data_types.h  index.cpp  index.h  infile_reader.cpp  macros.cpp  model_builder.cpp  solver.cpp  solver.h
BoltFlow/boundary_conditions/: macro_bc.cpp  macro_bc.h  micro_bc.h
BoltFlow/boundary_conditions/d2q9/: d2q9_sf_defs.cpp  d2q9_zh_defs.cpp  d2q9_zh_defs.h
BoltFlow/boundary_conditions/d3q15/: d3q15_sf_defs.cpp  d3q15_sf_defs.h  d3q15_zh_defs.cpp  d3q15_zh_defs.h
BoltFlow/cgns/: cgns_input_handler.cpp  cgns_output_handler.cpp
BoltFlow/cmake/: SelectLibraryConfigurations.cmake
BoltFlow/examples/unit_cell_3d/: unit_cell_BGK.lbmc
